* Audio: Master Lautstärkeregler hinzugefügt
* map04: Color Tint zu Feuer hinzugefügt
* map01: Autofahr-Animation am Ende des Levels eingefügt
* map05: Mehr Soundeffekte zum Endboss hinzugefügt

# Alpha 019

* Highscore-Liste: Wenn die Auflösung kleiner als 1366x768, wurde die Highscore-Liste nicht angezeigt
# map05: Endboss hinzugefügt

## Alpha 018 (02.09.2024)

* map04: Gegner aktiviert
* map04: Neuer Gegner hinzugefügt: Explodierendes Fass
* map04: Puzzle mit Schalter und Portal hinzugefügt
* Global: Performance Optimierungen

## Alpha 017 (23.08.2024)

* map04 hinzugefügt
* Video: Video Cutscenes können in den Grafikeinstellungen deaktiviert werden.
* Global: Animationen sind jetzt flüssiger, wenn V-Sync aktiviert ist
* Global: Performance Optimierungen
* Menü: Mauszeiger Steuerung über Controller verbessert

## Alpha 016 (03.08.2024)

* Neues Essen: Donuts
* Neues Essen: Pizza
* Menü: Weitere Grafikeinstellungen hinzugefügt
* Menü: "Map auswählen" Menü überarbeitet
* Linux: Spiel kann jetzt auch gestartet werden, wenn libportaudio2 nicht installiert ist.

## Alpha 015 (09.07.2024)

* Global: Ausdauer entfernt
* Global: Kamera-Bewegung optimiert
* map02: Kakteen hinzugefügt
* Controller: Vibration hinzugefügt
* map03: Slimer hinzugefügt
* map03: Puzzle mit Ventil hinzugefügt
* map03: Nebel animiert
* Global: Highscore kann übertragen werden
* map02, map03: Color Tint Post-Processing Effekt hinzugefügt
* Global: Filmgrain Post-Processing Effekt hinzugefügt
* Launcher: Zu kleine Bildschirmauflösungen entfernt
* Grafikoption "Qualität" zu Launcher hinzugefügt

## Alpha 014 (21.06.2024)

* Global: Äpfel hinzugefügt
* map02: Tretminen hinzugefügt
* Audio: "Beep" Soundeffekt ersetzt
* Global: Support für Rii USB Classic Controller wieder entfernt
* Launcher: Es werden nur noch vom Betriebssystem unterstützte Audio Backends angezeigt
* UI: Lautstärke-Regler für Umgebungsgeräusche hinzugefügt
* Menüpunkt "Level neu Starten" zu Pausenmenü hinzugefügt
